--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,58 @@
-/* You can add global styles to this file, and also import other style files */
+
+/**======================================================================
+=========================================================================
+Template Name:  Portfolio Styles
+Author:         thecodemeor
+File:           style.scss
+Description:    Code-space for all files .
+=========================================================================
+====================================================================== */
+/*********************************************
+* Import
+*********************************************/
+// Custom Styles Import
+// @use 'src/assets/scss/fonts.scss';
+@use 'src/assets/scss/component-custom.scss';
+
+/*********************************************
+* Global Styles
+*********************************************/
+body {
+    width: 100%; height: 100%;
+    margin: 0;
+    font-family: "Outfit", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: var( --text-color ) !important;
+    background: var( --background );
+
+    scroll-behavior: smooth;
+    scrollbar-width: none !important;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+* { box-sizing: border-box;}
+
+
+// Font Header ------------------------------------------------- //
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+    font-family: "Outfit", sans-serif;
+    font-weight: bold;
+    line-height: 1.2;
+}
+h1 { font-size: 2rem;}
+h2 { font-size: 1.75rem;}
+h3 { font-size: 1.5rem;}
+h4 { font-size: 1.45rem;}
+h5 { font-size: 1.25rem;}
+h6 {
+    font-size: 1rem;
+    letter-spacing: 0.05em;
+}
+p, a {
+    font-size: 0.875rem;
+    font-weight: normal;
+    line-height: 1.3;
+}
