--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@ Description:    Code-space for all files .
 * Import
 *********************************************/
 // Custom Styles Import
-// @use 'src/assets/scss/fonts.scss';
+@use 'src/assets/scss/fonts.scss';
 @use 'src/assets/scss/component-custom.scss';
 
 /*********************************************
