--- a/src/theme.css
+++ b/src/theme.css
@@ -17,7 +17,7 @@ html body.light {
     --text-color-revert: white;
 
     --line-primary: #b8e8ff;
-    --line-grayscale: #d1d1d1;
+    --line-grayscale: #e3e3e3;
 
     --color-300: #78d6ff;
     --color-400: #3dc5ff;
