--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -8,13 +8,15 @@ $spacing-2: 1.25rem;
     height: 100dvh;
     justify-content: center;
 }
-canvas#spiral {
+.trademark {
     position: absolute;
-    width: 100dvw; height: 100dvh;
-
-    circle {
-        fill: var( --primary-lite );
-        opacity: 0.6;
+    bottom: 0; right: 0;
+    width: fit-content; height: fit-content;
+    padding: $spacing-1;
+    font-family: "Conthrax", sans-serif;
+    color: var( --line-grayscale );
+    &.mobile {
+        padding: $spacing-2;
     }
 }
 main {
@@ -31,10 +33,10 @@ main {
         padding: 0 $spacing-1;
         border: solid 1px var( --primary );
         border-radius: $spacing-2;
-
-        .chat-container {
-            width: 100%; height: 100%;
-        }
+        background: rgba( 255, 255, 255,  0.5);
+        backdrop-filter: blur( 50px ); // frosted blur
+        -webkit-backdrop-filter: blur( 50px ); // for Safari
+        overflow: hidden;
     }
 
     .inputbox {
@@ -42,8 +44,17 @@ main {
         width: 100%; height: fit-content;
         padding: 0 10%;
         justify-content: center;
-        &.mobile {
-            padding: 0;
+        &.mobile { padding: 0;}
+        &.disabled {
+            position: relative;
+            filter: grayscale( 100 );
+            &::after {
+                content: '';
+                position: absolute;
+                top: 0; left: 0;
+                width: 100%; height: 100%;
+                z-index: 1;
+            }
         }
 
         app-input { width: 100%;}
