--- a/src/assets/scss/color-palette.scss
+++ b/src/assets/scss/color-palette.scss
@@ -12,7 +12,7 @@ $red-500: #ff2323;
 $red-600: #ff0505; // main
 $red-700: #d70000;
 $red-800: #b10303;
-$red-900: #b10303;
+$red-900: #920a0a;
 $red-950: #500000;
 
 // Rose
