--- a/src/assets/scss/fonts.scss
+++ b/src/assets/scss/fonts.scss
@@ -11,3 +11,10 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'Unageo';
+    src: url( 'src/assets/fonts/Unageo.ttf' ) format( 'truetype' );
+    font-weight: normal;
+    font-style: normal;
+}
