--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -8,13 +8,19 @@ $spacing-2: 1.25rem;
     height: 100dvh;
     justify-content: center;
 }
-.trademark {
+.layer {
     position: absolute;
-    bottom: 0; right: 0;
     width: fit-content; height: fit-content;
     padding: $spacing-1;
-    font-family: "Conthrax", sans-serif;
-    color: var( --line-grayscale );
+    &.settings {
+        top: 0; right: 0;
+        z-index: 100;
+    }
+    &.trademark {
+        bottom: 0; right: 0;
+        font-family: "Conthrax", sans-serif;
+        color: var( --line-grayscale );
+    }
     &.mobile {
         padding: $spacing-2;
     }
@@ -33,7 +39,7 @@ main {
         padding: 0 $spacing-1;
         border: solid 1px var( --primary );
         border-radius: $spacing-2;
-        background: rgba( 255, 255, 255,  0.5);
+        background: var( --mirror );
         backdrop-filter: blur( 50px ); // frosted blur
         -webkit-backdrop-filter: blur( 50px ); // for Safari
         overflow: hidden;
@@ -64,5 +70,21 @@ main {
         display: flex;
         width: 100%; height: 5.5rem;
         gap: $spacing-1;
+    }
+}
+
+// Extra Component =============================== //
+.toggle {
+    width: 6.5rem; height: 2.8rem;
+    margin: 0 auto;
+    border-radius: 1.4rem;
+    background-color: red;
+    cursor: pointer;
+
+    button {
+        height: calc( 2.8rem - 5px );
+        aspect-ratio: 1 / 1;
+        border-radius: 50%;
+        background: white;
     }
 }
