--- a/src/assets/scss/component-custom.scss
+++ b/src/assets/scss/component-custom.scss
@@ -1,8 +1,108 @@
-input {
-    width: 100%; height: 100%;
+/*********************************************
+* Angular Material
+*********************************************/
+@use '@angular/material' as mat;
+
+// Material Card Component =================================== //
+mat-card-title {
+    font-family: "Unageo", sans-serif !important;
+    font-size: 1.8rem !important;
+}
+
+// Material Input Component ================================== //
+$spacing-1: 0.625rem;
+$spacing-2: 1.25rem;
+$corner: 2rem;
+:root {
+    @include mat.menu-overrides((
+        container-shape: $corner,
+    ));
+}
+.mat-mdc-menu-panel {
     padding: 0;
-    font-size: 1rem;
-    border: none;
-    background: transparent;
-    outline: none;
+    margin-top: $spacing-1;
+    // border: solid 1px var( --primary );
+    background: var( --surface ) !important;
+
+    .mat-mdc-menu-content {
+        width: 17.5rem;
+        padding: $spacing-1;
+
+        mat-card {
+             @include mat.card-overrides((
+                outlined-container-color: transparent,
+                outlined-container-shape: calc( $corner - $spacing-1 ),
+                outlined-outline-width: 0
+            ));
+            color: var( --text-color-standard ) !important;
+            &.settings {
+                display: flex;
+                width: 100% !important;
+                flex-direction: column;
+                gap: 0.3125rem;
+                overflow: hidden;
+
+                mat-card-header, mat-card-content, mat-card-footer {
+                    background: var( --background ) !important;
+                }
+
+                mat-card-header {
+                    display: flex;
+                    padding: $spacing-1 $spacing-2;
+                    border-radius: 0 0 5px 5px;
+                    justify-content: center;
+                    align-items: center;
+                }
+
+                mat-card-content {
+                    display: flex;
+                    padding: $spacing-1;
+                    border-radius: 5px;
+                    flex-direction: column;
+                    gap: 0.6rem;
+                    &.theme {
+                        display: flex;
+                        width: 100%;
+                        flex-wrap: wrap;
+                        flex-direction: row;
+                        justify-content: center;
+                        gap: 5px;
+                        .sample {
+                            width: 1.5rem;
+                            aspect-ratio: 1 / 1;
+                            padding: 3px;
+                            border: solid 1px var( --line-grayscale );
+                            border-radius: 50%;
+                            background: var( --background );
+                            cursor: pointer;
+                            .color {
+                                width: 100%; height: 100%;
+                                border-radius: 50%;
+                            }
+                        }
+                    }
+                }
+
+                mat-card-footer {
+                    --text-1: 0.8rem;
+                    --text-2: 0.625rem;
+                    display: flex;
+                    padding: $spacing-1;
+                    border-radius: 5px 5px 0 0;
+                    flex-direction: column;
+                    align-items: center;
+                    p {
+                        opacity: 0.5;
+                        &:nth-child(1) {
+                            font-size: var( --text-1 );
+                        }
+                        &:nth-child(2) {
+                            font-size: var( --text-2 );
+                            line-height: var( --text-2 );
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
