--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -2,10 +2,14 @@ $spacing-1: 0.625rem;
 $spacing-2: 1.25rem;
 $spacing-3: 1.875rem;
 :host {
+    display: block;
     width: 100%; height: 100%;
-
-    ::-webkit-scrollbar { width: 6px;}
-    ::-webkit-scrollbar-thumb { border-radius: 3px; background: var( --primary-dark );}
+    border: solid 1px var( --primary );
+    border-radius: $spacing-2;
+    background: var( --mirror );
+    backdrop-filter: blur( 50px ); // frosted blur
+    -webkit-backdrop-filter: blur( 50px ); // for Safari
+    overflow: hidden;
 }
 main {
     position: relative;
@@ -16,10 +20,26 @@ main {
     gap: $spacing-2;
     overflow-y: auto;
 
+    ::-webkit-scrollbar { width: 6px;}
+    ::-webkit-scrollbar-thumb { border-radius: 3px; background: var( --primary-dark );}
+
+    .intros {
+        display: flex;
+        width: fit-content; height: fit-content;
+        margin: 0 auto;
+        flex-direction: column;
+        align-items: center;
+        gap: $spacing-1;
+        app-logo { width: 10rem;}
+        h1 { text-align: center; color: var( --text-color-standard );}
+    }
     .chat-row {
         display: flex;
         width: 100%; height: fit-content;
-        &.flex-right { justify-content: flex-end;}
+        &.flex-right {
+            border-bottom: solid 1px var( --line-grayscale );
+            justify-content: flex-end;
+        }
         &.flex-left { justify-content: flex-start;}
 
         .chat {
@@ -31,7 +51,6 @@ main {
                 margin: 0 0 $spacing-2 auto;
                 padding: $spacing-1 $spacing-3;
                 color: white;
-                border-bottom: solid 1px rgba(255, 255, 255, 0.5);
                 border-radius: $spacing-2 0 $spacing-2 $spacing-2 ;
                 background: var( --primary );
                 animation: slideinleft 0.3s ease-in-out forwards;
