--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -35,13 +35,25 @@ main {
 
     .chatbox {
         flex: 1 1 0;
+        position: relative;
         width: 100%; height: 100%;
-        border: solid 1px var( --primary );
-        border-radius: $spacing-2;
-        background: var( --mirror );
-        backdrop-filter: blur( 50px ); // frosted blur
-        -webkit-backdrop-filter: blur( 50px ); // for Safari
-        overflow: hidden;
+
+        app-chat {
+            opacity: 0;
+            animation: appear 0.6s forwards ease-out;
+            animation-delay: 1.5s;
+            @keyframes appear {
+                to { opacity: 1;}
+            }
+        }
+
+        svg.border-line {
+            position: absolute;
+            top: 0; left: 0;
+            overflow: visible;
+            
+            rect { stroke: var( --primary );}
+        }
     }
 
     .inputbox {
