--- a/src/assets/scss/fonts.scss
+++ b/src/assets/scss/fonts.scss
@@ -18,3 +18,17 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'Caviar Dreams';
+    src: url( 'src/assets/fonts/CaviarDreams/CaviarDreams.ttf' ) format( 'truetype' );
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Caviar Dreams';
+    src: url( 'src/assets/fonts/CaviarDreams/CaviarDreams-Bold.ttf' ) format( 'truetype' );
+    font-weight: bold;
+    font-style: normal;
+}
