--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,10 +19,10 @@ Description:    Code-space for all files .
 body {
     width: 100%; height: 100%;
     margin: 0;
-    font-family: "Outfit", sans-serif;
+    font-family: "Outfit", sans-serif !important;
     font-weight: 400;
     font-style: normal;
-    color: var( --text-color ) !important;
+    color: var( --text-color-standard ) !important;
     background: var( --background );
 
     scroll-behavior: smooth;
@@ -30,7 +30,10 @@ body {
 }
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+    margin: 0; 
+    font-family: "Outfit", sans-serif;
+}
 * { box-sizing: border-box;}
 
 
@@ -38,10 +41,13 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 h1, h2, h3, h4, h5, h6, p {
     margin: 0;
     font-family: "Outfit", sans-serif;
-    font-weight: bold;
+    font-weight: normal;
     line-height: 1.2;
 }
-h1 { font-size: 2rem;}
+h1 {
+    font-size: 4rem;
+    font-weight: 600;
+}
 h2 { font-size: 1.75rem;}
 h3 { font-size: 1.5rem;}
 h4 { font-size: 1.45rem;}
@@ -54,4 +60,25 @@ p, a {
     font-size: 0.875rem;
     font-weight: normal;
     line-height: 1.3;
+}
+
+input, button {
+    font-family: "Outfit", sans-serif;
+}
+
+@media ( max-width: 911px ) {
+    h1 { font-size: 3.5rem;}
+    h2 { font-size: 1.75rem;}
+    h3 { font-size: 1.5rem;}
+    h4 { font-size: 1.45rem;}
+    h5 { font-size: 1.25rem;}
+    h6 {
+        font-size: 1rem;
+        letter-spacing: 0.05em;
+    }
+    p, a {
+        font-size: 0.875rem;
+        font-weight: normal;
+        line-height: 1.3;
+    }
 }
