--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -37,23 +37,7 @@ main {
         flex: 1 1 0;
         position: relative;
         width: 100%; height: 100%;
-
-        app-chat {
-            opacity: 0;
-            animation: appear 0.6s forwards ease-out;
-            animation-delay: 1.5s;
-            @keyframes appear {
-                to { opacity: 1;}
-            }
-        }
-
-        svg.border-line {
-            position: absolute;
-            top: 0; left: 0;
-            overflow: visible;
-            
-            rect { stroke: var( --primary );}
-        }
+        overflow-y: auto;
     }
 
     .inputbox {
