--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,6 +36,24 @@ body {
 }
 * { box-sizing: border-box;}
 
+.spacer { flex: 1 1 0}
+.undermentainance {
+    position: relative;
+    filter: grayscale( 100 );
+    &::after {
+        content: 'MENTAINANCE';
+        position: absolute;
+        top: 50%; left: 50%;
+        display: flex;
+        font-weight: 900;
+        color: white;
+        text-align: center;
+        transform: translate( -50%, -50% ) rotate(-10deg);
+        pointer-events: none;
+        z-index: 10;
+    }
+}
+
 
 // Font Header ------------------------------------------------- //
 h1, h2, h3, h4, h5, h6, p {
@@ -61,9 +79,11 @@ p, a {
     font-weight: normal;
     line-height: 1.3;
 }
-
 input, button {
     font-family: "Outfit", sans-serif;
+}
+.chart {
+    title, text { fill: var( --text-color-standard ) !important;}
 }
 
 @media ( max-width: 911px ) {
