--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -15,6 +15,7 @@
             <p class="whitespace-pre-wrap">{{ message.text }}</p>
         </div>
     </div>
+    <app-set-personal *ngIf="signalPersona"></app-set-personal>
     <app-set-project *ngIf="signalProjekt"></app-set-project>
     <app-set-skills *ngIf="signalCompetenze"></app-set-skills>
     <app-set-contact *ngIf="signalKontakt"></app-set-contact>
