--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -15,6 +15,8 @@ $spacing-3: 1.875rem;
     @keyframes show {
         to { border: solid 2px var( --primary );}
     }
+
+    ::-webkit-scrollbar { display: none;}
 }
 main {
     position: relative;
@@ -24,9 +26,6 @@ main {
     flex-direction: column;
     // gap: $spacing-1;
     overflow-y: auto;
-
-    ::-webkit-scrollbar { width: 6px;}
-    ::-webkit-scrollbar-thumb { border-radius: 3px; background: var( --primary-dark );}
 
     .intros {
         display: flex;
